<resources>
    <string name="app_name">Shows-Daniel-Ilievski</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_helper">In order to continue please log in</string>
    <string name="shows">Shows</string>
    <string name="welcome_text">Welcome, %s!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="load">Load</string>
    <string name="empty_shows_list">Your shows are not showing. Get it?</string>
    <string name="hide">Hide</string>
    <string name="reviews">Reviews</string>
    <string name="write_a_review">Write a review</string>
    <string name="review_example">This show was a complete masterpiece</string>
    <string name="username">neil.the.navy.seal</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="ratingBarText">%1$d reviews, %2$.2f average</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="profile_email">%s</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember me</string>
    <string name="alertDialogTitle">Confirm Log out</string>
    <string name="alertDialogMessage">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="EMAIL">EMAIL</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="IS_CHECKED">IS_CHECKED</string>
    <string name="pick_an_action">Pick an action</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="registration_success">Registration successful!</string>
    <string name="registration_fail">Registration not successful!</string>
    <string name="passwords_mismatch">Passwords do not match!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="password_condition">Password must contain at least 6 characters!</string>
    <string name="invalid_login_credentials">Invalid login credentials. Please try again.</string>
    <string name="top_rated">Top rated</string>
    <string name="scroll_to_top_button">Scroll to top button</string>
</resources>