<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".fragment.ShowDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/collapsing_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed|snap"
            app:toolbarId="@id/showDetailsToolbar">

            <ImageView
                android:id="@+id/collapse_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/stranger_things_show"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/showDetailsToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="40dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nested_scroll_view_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:justificationMode="inter_word"
                android:text="@string/lorem_ipsum"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/reviews"
                android:textColor="@color/black"
                android:textSize="24sp"

                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ratingBarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:text="@string/ratingBarText"/>

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:isIndicator="true"
                android:progressTint="?attr/colorPrimary"
                android:secondaryProgressTint="?attr/colorPrimary"
                android:rating="3"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:stepSize="0.01"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_review"/>

            <TextView
                android:id="@+id/reviewEmptyStateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="40dp"
                android:text="@string/no_reviews_yet"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/write_review_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="24dp"
            app:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingVertical="12dp"
            android:text="@string/write_a_review"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:focusable="true"
            app:cornerRadius="22dp"
            app:elevation="20dp"/>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>